--- a/styles.scss
+++ b/styles.scss
@@ -14,11 +14,28 @@
 html { /* stylelint-disable-line */
   box-sizing: border-box;
   overflow-x: hidden;
+  font-family: $fbody;
+  font-size: $fbase;
 
   // TODO fleiri grunn stillingar
 }
 
+main {
+  max-width: $wmax;
+  padding-right: $gutter;
+  padding-left: $gutter;
+  margin: 0 auto;
+
+  @media (min-width: $wmax) {
+    padding-right: 0;
+    padding-left: 0;
+  }
+}
 
 
 // TODO sækja allar sass skrár
-@import "scss/...";
+@import "scss/header";
+@import "scss/footer";
+@import "scss/index";
+@import "scss/staff";
+@import "scss/cart";
